--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ body {
     overflow-x: hidden;
     background-image: url("/images/background_main.webp");
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* header text */
