--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@ body {
     background-image: url("/images/background_main.webp");
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* header text */
